# pykef-w1

./: LICENSE  README.md  pyproject.toml
docs/: PROTOCOL.md
src/pykef_w1/: __init__.py  _sync.py  connection.py  enums.py  exceptions.py  models.py  protocol.py  speaker.py
tests/: conftest.py  test_models.py  test_protocol.py  test_speaker.py
